# geospatialfile

./: README.md  Untitled.ipynb  setup.cfg  setup.py  test.ipynb
.devcontainer/: devcontainer.json
geoboundaries/: __init__.py  geoboundaries.py
geoboundaries/test/: test_geoboundaries.py
geospatialfile/: __init__.py  geospatialfile.py
geospatialfile/geospatialfile/: __init__.py
geospatialfile/geospatialfile/test/: test_geospatialfile.py
src/: main.py
src/geospatialfile/: Untitled.ipynb  __init__.py  geospatialfile.py  module_spark.py  spark.py
