[metadata]
name = geospatialfile
description = api to connect to GeoBoundaries.org
version = '0.0.6'
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Todd Marino
author_email = marino_todd@bah.com, marino.todd@gmail.com

[options]
zip_safe = False
package_dir =
    = geospatialfile
packages = find:
platforms = any
include_package_data = True
install_requires =
    cython
    apache-sedona
    pyspark
    geopandas
    shapely
    gitpython>=3.1.24
    lxml>=4.7.1
    numpy>=1.19.3
    pandas>=1.1.3,<1.4  # statsmodel raises FutureWarning: pandas.Int64Index is deprecated
    requests
python_requires = >=3.7,<3.10

[options.packages.find]
where = geospatialfile
