[metadata]
name = geospatialfile
description = api to connect to GeoBoundaries.org.
version = attr: geospatialfile.__version__
license = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url='https://github.com/marinert/geospatialfile'
author = Todd Marino
author_email = marino_todd@bah.com, marino.todd@gmail.com

[options]
package_dir =
    = geospatialfile
packages = find:
install_requires =
    apache-sedona
    pyspark
    geopandas
    pycountry
python_requires = >=3.7,<3.10

[options.packages.find]
where = geospatialfile


[options.extras_require]
dev = 
    ipykernel
testing =
    pytest

[tool:pytest]
testpaths =
        tests
        geospatial
